refactor: simplify map conditions